Aggiunta la gestione dei film

--- a/src/js/style.scss
+++ b/src/js/style.scss
@@ -7,3 +7,18 @@ body {
       black
     );
 }
+.app {
+  font-family: sans-serif;
+  align-content: center;
+}
+.corpo {
+  text-align: center;
+  display: flex;
+  }
+.card {
+  background-color: white;
+width: 700px;
+height: fit-content;
+margin: 10px 20px;
+font-size: 20px;
+}
